--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prisma": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "8.0.0"
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.15.1",
+    "@tanstack/react-query": "^5.45.1",
+    "ext": "^1.7.0",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.4",
     "@types/node": "17.0.14",
-    "@types/react": "17.0.38",
+    "@types/react": "^18.3.3",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "4.5.5"
   }
 }
